fix image distortion

--- a/wp-content/themes/CreativePortfolioResFree/style.css
+++ b/wp-content/themes/CreativePortfolioResFree/style.css
@@ -150,7 +150,7 @@ border-radius: 8px; border: none; }
 .home_box { float: left; width: 590px; margin-top: 25px; }
 .home_box img { display: block; }
 .home_box img,
-.home_box iframe { width: 100%; height: 335px; }
+.home_box iframe { max-width: 100%; height: 335px; margin:0 auto; }
 .home_box h3 { text-align: center; font-size: 20px; font-family: 'Lato', sans-serif; font-weight: 400; color: #333; letter-spacing: 1.5px; }
 .home_box_media { position: relative; }
 .home_box_hover { position: absolute; width: 100%; height: 100%;  background: url('images/black-trans.png') repeat; top: 0; left: 0; display: none; }
